--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,23 +36,19 @@ jobs:
         with:
           fetch-depth: 0
           clean: true
-      - name: Restore Rust cache from host
+      - name: Use actions/cache for rust cache
+        uses: actions/cache@v3
+        with:
+          path: /tmp/rust-cache
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      - name: Sync from cache location
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
-          SECONDS=0
-          while ! mkdir "/tmp/rust-cache.lock" 2>/dev/null; do
-            if [ $SECONDS -gt 300 ]; then
-              echo "Timeout waiting for lock. Forcibly removing stale lock file."
-              rmdir "/tmp/rust-cache.lock" || true
-              continue
-            fi
-            echo "Cache is locked. Waiting 10 seconds..."
-            sleep 10
-          done
-          trap 'rmdir "/tmp/rust-cache.lock"' EXIT
+          echo "--- Restoring from /tmp/rust-cache ---"
           if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
+            echo "Cache found. Restoring..."
             mkdir -p ~/.cargo/git ~/.cargo/registry ./target
             nix shell nixpkgs#rsync -c bash -c "
               rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
@@ -60,13 +56,12 @@ jobs:
               rsync -a /tmp/rust-cache/target/ ./target/
             "
           else
-            echo "No Rust cache found. Will be created after build."
+            echo "No cache found. A new one will be created."
           fi
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
@@ -79,33 +74,6 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
-      - name: Save Rust cache to host
-        if: always()
-        run: |
-          set -e
-          echo "--- Saving Rust cache to host cache ---"
-          SECONDS=0
-          while ! mkdir "/tmp/rust-cache.lock" 2>/dev/null; do
-            if [ $SECONDS -gt 300 ]; then
-              echo "Timeout waiting for lock. Forcibly removing stale lock file."
-              rmdir "/tmp/rust-cache.lock" || true
-              continue
-            fi
-            echo "Cache is locked. Waiting 10 seconds..."
-            sleep 10
-          done
-          trap 'rmdir "/tmp/rust-cache.lock"' EXIT
-          echo "Acquired lock to save cache"
-          mkdir -p /tmp/rust-cache-stage/cargo-git /tmp/rust-cache-stage/cargo-registry /tmp/rust-cache-stage/target
-          nix shell nixpkgs#rsync -c bash -c "
-            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache-stage/cargo-git/
-            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache-stage/cargo-registry/
-            rsync -a --delete ./target/ /tmp/rust-cache-stage/target/
-          "
-          rm -rf /tmp/rust-cache
-          mv /tmp/rust-cache-stage /tmp/rust-cache
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       - name: Build chain specs
@@ -276,23 +244,19 @@ jobs:
           fetch-depth: 0
           ref: master
           clean: true
-      - name: Restore Rust cache from host
+      - name: Use actions/cache for rust cache
+        uses: actions/cache@v3
+        with:
+          path: /tmp/rust-cache
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      - name: Sync from cache location
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
-          SECONDS=0
-          while ! mkdir "/tmp/rust-cache.lock" 2>/dev/null; do
-            if [ $SECONDS -gt 300 ]; then
-              echo "Timeout waiting for lock. Forcibly removing stale lock file."
-              rmdir "/tmp/rust-cache.lock" || true
-              continue
-            fi
-            echo "Cache is locked. Waiting 10 seconds..."
-            sleep 10
-          done
-          trap 'rmdir "/tmp/rust-cache.lock"' EXIT
+          echo "--- Restoring from /tmp/rust-cache ---"
           if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
+            echo "Cache found. Restoring..."
             mkdir -p ~/.cargo/git ~/.cargo/registry ./target
             nix shell nixpkgs#rsync -c bash -c "
               rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
@@ -300,7 +264,7 @@ jobs:
               rsync -a /tmp/rust-cache/target/ ./target/
             "
           else
-            echo "No Rust cache found. Will be created after build."
+            echo "No cache found. A new one will be created."
           fi
       - name: Get current commit SHA
         id: get_sha
@@ -309,7 +273,6 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
@@ -343,31 +306,17 @@ jobs:
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:latest
           docker push ghcr.io/${{ github.repository }}/partner-chains-node-unstable:latest
-      - name: Save Rust cache to host
+      - name: Sync to cache location
         if: always()
         run: |
           set -e
-          echo "--- Saving Rust cache to host cache ---"
-          SECONDS=0
-          while ! mkdir "/tmp/rust-cache.lock" 2>/dev/null; do
-            if [ $SECONDS -gt 300 ]; then
-              echo "Timeout waiting for lock. Forcibly removing stale lock file."
-              rmdir "/tmp/rust-cache.lock" || true
-              continue
-            fi
-            echo "Cache is locked. Waiting 10 seconds..."
-            sleep 10
-          done
-          trap 'rmdir "/tmp/rust-cache.lock"' EXIT
-          echo "Acquired lock to save cache"
-          mkdir -p /tmp/rust-cache-stage/cargo-git /tmp/rust-cache-stage/cargo-registry /tmp/rust-cache-stage/target
+          echo "--- Saving to /tmp/rust-cache ---"
+          mkdir -p /tmp/rust-cache/cargo-git /tmp/rust-cache/cargo-registry /tmp/rust-cache/target
           nix shell nixpkgs#rsync -c bash -c "
-            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache-stage/cargo-git/
-            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache-stage/cargo-registry/
-            rsync -a --delete ./target/ /tmp/rust-cache-stage/target/
+            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a --delete ./target/ /tmp/rust-cache/target/
           "
-          rm -rf /tmp/rust-cache
-          mv /tmp/rust-cache-stage /tmp/rust-cache
           echo "--- Verifying cache contents ---"
           ls -laR /tmp/rust-cache
       - name: Rename artifact
@@ -554,23 +503,19 @@ jobs:
           fetch-depth: 0
           ref: ${{ inputs.sha }}
           clean: true
-      - name: Restore Rust cache from host
+      - name: Use actions/cache for rust cache
+        uses: actions/cache@v3
+        with:
+          path: /tmp/rust-cache
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      - name: Sync from cache location
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
-          SECONDS=0
-          while ! mkdir "/tmp/rust-cache.lock" 2>/dev/null; do
-            if [ $SECONDS -gt 300 ]; then
-              echo "Timeout waiting for lock. Forcibly removing stale lock file."
-              rmdir "/tmp/rust-cache.lock" || true
-              continue
-            fi
-            echo "Cache is locked. Waiting 10 seconds..."
-            sleep 10
-          done
-          trap 'rmdir "/tmp/rust-cache.lock"' EXIT
+          echo "--- Restoring from /tmp/rust-cache ---"
           if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
+            echo "Cache found. Restoring..."
             mkdir -p ~/.cargo/git ~/.cargo/registry ./target
             nix shell nixpkgs#rsync -c bash -c "
               rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
@@ -578,13 +523,12 @@ jobs:
               rsync -a /tmp/rust-cache/target/ ./target/
             "
           else
-            echo "No Rust cache found. Will be created after build."
+            echo "No cache found. A new one will be created."
           fi
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
@@ -597,35 +541,10 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
-      - name: Save Rust cache to host
-        if: always()
-        run: |
-          set -e
-          echo "--- Saving Rust cache to host cache ---"
-          SECONDS=0
-          while ! mkdir "/tmp/rust-cache.lock" 2>/dev/null; do
-            if [ $SECONDS -gt 300 ]; then
-              echo "Timeout waiting for lock. Forcibly removing stale lock file."
-              rmdir "/tmp/rust-cache.lock" || true
-              continue
-            fi
-            echo "Cache is locked. Waiting 10 seconds..."
-            sleep 10
-          done
-          trap 'rmdir "/tmp/rust-cache.lock"' EXIT
-          echo "Acquired lock to save cache"
-          mkdir -p /tmp/rust-cache-stage/cargo-git /tmp/rust-cache-stage/cargo-registry /tmp/rust-cache-stage/target
-          nix shell nixpkgs#rsync -c bash -c "
-            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache-stage/cargo-git/
-            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache-stage/cargo-registry/
-            rsync -a --delete ./target/ /tmp/rust-cache-stage/target/
-          "
-          rm -rf /tmp/rust-cache
-          mv /tmp/rust-cache-stage /tmp/rust-cache
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
+      #  with:
+      #    command: check licenses
       - name: Build chain specs
         run: |
           source dev/envs/devnet/.envrc
