--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,10 @@ jobs:
           fetch-depth: 0
           clean: true
       - name: Acquire cache lock
-        uses: andstor/lockfiles@v1
-        with:
-          lockfile: /tmp/rust-cache.lock
-          timeout: 300
+        run: |
+          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+            sleep 5
+          done
       - name: Restore Rust cache from host
         run: |
           set -e
@@ -58,7 +58,7 @@ jobs:
           fi
       - name: Release cache lock
         if: always()
-        run: rm -f /tmp/rust-cache.lock
+        run: rmdir /tmp/rust-cache.lock
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -77,10 +77,10 @@ jobs:
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
       - name: Acquire cache lock
-        uses: andstor/lockfiles@v1
-        with:
-          lockfile: /tmp/rust-cache.lock
-          timeout: 300
+        run: |
+          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+            sleep 5
+          done
       - name: Save Rust cache to host
         if: always()
         run: |
@@ -96,7 +96,7 @@ jobs:
           ls -laR /tmp/rust-cache
       - name: Release cache lock
         if: always()
-        run: rm -f /tmp/rust-cache.lock
+        run: rmdir /tmp/rust-cache.lock
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
@@ -270,10 +270,10 @@ jobs:
           ref: master
           clean: true
       - name: Acquire cache lock
-        uses: andstor/lockfiles@v1
-        with:
-          lockfile: /tmp/rust-cache.lock
-          timeout: 300
+        run: |
+          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+            sleep 5
+          done
       - name: Restore Rust cache from host
         run: |
           set -e
@@ -291,7 +291,7 @@ jobs:
           fi
       - name: Release cache lock
         if: always()
-        run: rm -f /tmp/rust-cache.lock
+        run: rmdir /tmp/rust-cache.lock
       - name: Get current commit SHA
         id: get_sha
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
@@ -334,10 +334,10 @@ jobs:
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:latest
           docker push ghcr.io/${{ github.repository }}/partner-chains-node-unstable:latest
       - name: Acquire cache lock
-        uses: andstor/lockfiles@v1
-        with:
-          lockfile: /tmp/rust-cache.lock
-          timeout: 300
+        run: |
+          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+            sleep 5
+          done
       - name: Save Rust cache to host
         if: always()
         run: |
@@ -353,7 +353,7 @@ jobs:
           ls -laR /tmp/rust-cache
       - name: Release cache lock
         if: always()
-        run: rm -f /tmp/rust-cache.lock
+        run: rmdir /tmp/rust-cache.lock
       - name: Rename artifact
         run: |
           cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
@@ -539,10 +539,10 @@ jobs:
           ref: ${{ inputs.sha }}
           clean: true
       - name: Acquire cache lock
-        uses: andstor/lockfiles@v1
-        with:
-          lockfile: /tmp/rust-cache.lock
-          timeout: 300
+        run: |
+          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+            sleep 5
+          done
       - name: Restore Rust cache from host
         run: |
           set -e
@@ -560,7 +560,7 @@ jobs:
           fi
       - name: Release cache lock
         if: always()
-        run: rm -f /tmp/rust-cache.lock
+        run: rmdir /tmp/rust-cache.lock
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -579,10 +579,10 @@ jobs:
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
       - name: Acquire cache lock
-        uses: andstor/lockfiles@v1
-        with:
-          lockfile: /tmp/rust-cache.lock
-          timeout: 300
+        run: |
+          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
+            sleep 5
+          done
       - name: Save Rust cache to host
         if: always()
         run: |
@@ -598,7 +598,7 @@ jobs:
           ls -laR /tmp/rust-cache
       - name: Release cache lock
         if: always()
-        run: rm -f /tmp/rust-cache.lock
+        run: rmdir /tmp/rust-cache.lock
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
