--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,26 +36,28 @@ jobs:
         with:
           fetch-depth: 0
           clean: true
-      - name: Restore Rust cache from host
+      - name: Restore & later Save Rust cache
+        id: rust-cache
+        uses: corca-ai/local-cache@v3
+        with:
+          base: /tmp
+          path: rust-cache
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          clean-key: true
+      - name: Populate Cargo & target from /tmp
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
-          if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
-          else
-            echo "No Rust cache found. Will be created after build."
-          fi
+          echo "--- Populating from /tmp/rust-cache ---"
+          mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+          nix shell nixpkgs#rsync -c bash -c "
+            rsync -a --delete /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+            rsync -a --delete /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+            rsync -a --delete /tmp/rust-cache/target/ ./target/
+          "
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
@@ -68,19 +70,17 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
-      - name: Save Rust cache to host
+      - name: Populate /tmp from Cargo & target
         if: always()
         run: |
           set -e
-          echo "--- Saving Rust cache to host cache ---"
-          mkdir -p /tmp/rust-cache
+          echo "--- Populating /tmp/rust-cache for saving ---"
+          mkdir -p /tmp/rust-cache/cargo-git /tmp/rust-cache/cargo-registry /tmp/rust-cache/target
           nix shell nixpkgs#rsync -c bash -c "
-            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a ./target/ /tmp/rust-cache/target/
+            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a --delete ./target/ /tmp/rust-cache/target/
           "
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
@@ -253,21 +253,24 @@ jobs:
           fetch-depth: 0
           ref: master
           clean: true
-      - name: Restore Rust cache from host
+      - name: Restore & later Save Rust cache
+        id: rust-cache
+        uses: corca-ai/local-cache@v3
+        with:
+          base: /tmp
+          path: rust-cache
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          clean-key: true
+      - name: Populate Cargo & target from /tmp
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
-          if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
-          else
-            echo "No Rust cache found. Will be created after build."
-          fi
+          echo "--- Populating from /tmp/rust-cache ---"
+          mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+          nix shell nixpkgs#rsync -c bash -c "
+            rsync -a --delete /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+            rsync -a --delete /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+            rsync -a --delete /tmp/rust-cache/target/ ./target/
+          "
       - name: Get current commit SHA
         id: get_sha
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
@@ -275,7 +278,6 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
@@ -309,19 +311,17 @@ jobs:
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:latest
           docker push ghcr.io/${{ github.repository }}/partner-chains-node-unstable:latest
-      - name: Save Rust cache to host
+      - name: Populate /tmp from Cargo & target
         if: always()
         run: |
           set -e
-          echo "--- Saving Rust cache to host cache ---"
-          mkdir -p /tmp/rust-cache
+          echo "--- Populating /tmp/rust-cache for saving ---"
+          mkdir -p /tmp/rust-cache/cargo-git /tmp/rust-cache/cargo-registry /tmp/rust-cache/target
           nix shell nixpkgs#rsync -c bash -c "
-            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a ./target/ /tmp/rust-cache/target/
+            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a --delete ./target/ /tmp/rust-cache/target/
           "
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       - name: Rename artifact
         run: |
           cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
@@ -506,26 +506,28 @@ jobs:
           fetch-depth: 0
           ref: ${{ inputs.sha }}
           clean: true
-      - name: Restore Rust cache from host
+      - name: Restore & later Save Rust cache
+        id: rust-cache
+        uses: corca-ai/local-cache@v3
+        with:
+          base: /tmp
+          path: rust-cache
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          clean-key: true
+      - name: Populate Cargo & target from /tmp
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
-          if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
-          else
-            echo "No Rust cache found. Will be created after build."
-          fi
+          echo "--- Populating from /tmp/rust-cache ---"
+          mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+          nix shell nixpkgs#rsync -c bash -c "
+            rsync -a --delete /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+            rsync -a --delete /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+            rsync -a --delete /tmp/rust-cache/target/ ./target/
+          "
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          aws-region: ${{ env.AWS_REGION }}
       - name: Login to container registry
         uses: docker/login-action@v3
         with:
@@ -538,19 +540,17 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
-      - name: Save Rust cache to host
+      - name: Populate /tmp from Cargo & target
         if: always()
         run: |
           set -e
-          echo "--- Saving Rust cache to host cache ---"
-          mkdir -p /tmp/rust-cache
+          echo "--- Populating /tmp/rust-cache for saving ---"
+          mkdir -p /tmp/rust-cache/cargo-git /tmp/rust-cache/cargo-registry /tmp/rust-cache/target
           nix shell nixpkgs#rsync -c bash -c "
-            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a ./target/ /tmp/rust-cache/target/
+            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a --delete ./target/ /tmp/rust-cache/target/
           "
-          echo "--- Verifying cache contents ---"
-          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
