--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,29 +36,25 @@ jobs:
         with:
           fetch-depth: 0
           clean: true
-      - name: Acquire cache lock
-        run: |
-          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
-            sleep 5
-          done
-      - name: Restore Rust cache from host
+      - name: Setup cache symlinks
+        id: setup_cache
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
+          echo "--- Setting up cache symlinks ---"
+          mkdir -p ~/.cargo
+          rm -rf ~/.cargo/git ~/.cargo/registry ./target
           if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
+            echo "Host cache found. Symlinking directories."
+            echo "cache_existed=true" >> $GITHUB_OUTPUT
+            mkdir -p /tmp/rust-cache/cargo-git /tmp/rust-cache/cargo-registry /tmp/rust-cache/target
+            ln -s /tmp/rust-cache/cargo-git ~/.cargo/git
+            ln -s /tmp/rust-cache/cargo-registry ~/.cargo/registry
+            ln -s /tmp/rust-cache/target ./target
           else
-            echo "No Rust cache found. Will be created after build."
+            echo "No host cache found. Creating directories for initial build."
+            echo "cache_existed=false" >> $GITHUB_OUTPUT
+            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
           fi
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -76,16 +72,17 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
-      - name: Acquire cache lock
+      - name: Save Rust cache to host (if cache was populated)
+        if: always() && steps.setup_cache.outputs.cache_existed == 'false'
         run: |
+          set -e
+          echo "--- Acquiring lock to save initial cache ---"
           until mkdir /tmp/rust-cache.lock 2>/dev/null; do
             sleep 5
           done
-      - name: Save Rust cache to host
-        if: always()
-        run: |
-          set -e
-          echo "--- Saving Rust cache to host cache ---"
+          trap 'rmdir /tmp/rust-cache.lock' EXIT
+
+          echo "--- Saving Rust cache to host for the first time ---"
           mkdir -p /tmp/rust-cache
           nix shell nixpkgs#rsync -c bash -c "
             rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
@@ -94,9 +91,6 @@ jobs:
           "
           echo "--- Verifying cache contents ---"
           ls -laR /tmp/rust-cache
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
@@ -269,29 +263,25 @@ jobs:
           fetch-depth: 0
           ref: master
           clean: true
-      - name: Acquire cache lock
-        run: |
-          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
-            sleep 5
-          done
-      - name: Restore Rust cache from host
+      - name: Setup cache symlinks
+        id: setup_cache
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
+          echo "--- Setting up cache symlinks ---"
+          mkdir -p ~/.cargo
+          rm -rf ~/.cargo/git ~/.cargo/registry ./target
           if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
+            echo "Host cache found. Symlinking directories."
+            echo "cache_existed=true" >> $GITHUB_OUTPUT
+            mkdir -p /tmp/rust-cache/cargo-git /tmp/rust-cache/cargo-registry /tmp/rust-cache/target
+            ln -s /tmp/rust-cache/cargo-git ~/.cargo/git
+            ln -s /tmp/rust-cache/cargo-registry ~/.cargo/registry
+            ln -s /tmp/rust-cache/target ./target
           else
-            echo "No Rust cache found. Will be created after build."
+            echo "No host cache found. Creating directories for initial build."
+            echo "cache_existed=false" >> $GITHUB_OUTPUT
+            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
           fi
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
       - name: Get current commit SHA
         id: get_sha
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
@@ -333,16 +323,17 @@ jobs:
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:latest
           docker push ghcr.io/${{ github.repository }}/partner-chains-node-unstable:latest
-      - name: Acquire cache lock
+      - name: Save Rust cache to host (if cache was populated)
+        if: always() && steps.setup_cache.outputs.cache_existed == 'false'
         run: |
+          set -e
+          echo "--- Acquiring lock to save initial cache ---"
           until mkdir /tmp/rust-cache.lock 2>/dev/null; do
             sleep 5
           done
-      - name: Save Rust cache to host
-        if: always()
-        run: |
-          set -e
-          echo "--- Saving Rust cache to host cache ---"
+          trap 'rmdir /tmp/rust-cache.lock' EXIT
+
+          echo "--- Saving Rust cache to host for the first time ---"
           mkdir -p /tmp/rust-cache
           nix shell nixpkgs#rsync -c bash -c "
             rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
@@ -351,9 +342,6 @@ jobs:
           "
           echo "--- Verifying cache contents ---"
           ls -laR /tmp/rust-cache
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
       - name: Rename artifact
         run: |
           cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
@@ -538,29 +526,25 @@ jobs:
           fetch-depth: 0
           ref: ${{ inputs.sha }}
           clean: true
-      - name: Acquire cache lock
-        run: |
-          until mkdir /tmp/rust-cache.lock 2>/dev/null; do
-            sleep 5
-          done
-      - name: Restore Rust cache from host
+      - name: Setup cache symlinks
+        id: setup_cache
         run: |
           set -e
-          echo "--- Restoring Rust cache from host ---"
+          echo "--- Setting up cache symlinks ---"
+          mkdir -p ~/.cargo
+          rm -rf ~/.cargo/git ~/.cargo/registry ./target
           if [ -d /tmp/rust-cache ]; then
-            echo "Rust cache found. Restoring..."
-            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
-            nix shell nixpkgs#rsync -c bash -c "
-              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
-              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
-              rsync -a /tmp/rust-cache/target/ ./target/
-            "
+            echo "Host cache found. Symlinking directories."
+            echo "cache_existed=true" >> $GITHUB_OUTPUT
+            mkdir -p /tmp/rust-cache/cargo-git /tmp/rust-cache/cargo-registry /tmp/rust-cache/target
+            ln -s /tmp/rust-cache/cargo-git ~/.cargo/git
+            ln -s /tmp/rust-cache/cargo-registry ~/.cargo/registry
+            ln -s /tmp/rust-cache/target ./target
           else
-            echo "No Rust cache found. Will be created after build."
+            echo "No host cache found. Creating directories for initial build."
+            echo "cache_existed=false" >> $GITHUB_OUTPUT
+            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
           fi
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -578,16 +562,17 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
-      - name: Acquire cache lock
+      - name: Save Rust cache to host (if cache was populated)
+        if: always() && steps.setup_cache.outputs.cache_existed == 'false'
         run: |
+          set -e
+          echo "--- Acquiring lock to save initial cache ---"
           until mkdir /tmp/rust-cache.lock 2>/dev/null; do
             sleep 5
           done
-      - name: Save Rust cache to host
-        if: always()
-        run: |
-          set -e
-          echo "--- Saving Rust cache to host cache ---"
+          trap 'rmdir /tmp/rust-cache.lock' EXIT
+
+          echo "--- Saving Rust cache to host for the first time ---"
           mkdir -p /tmp/rust-cache
           nix shell nixpkgs#rsync -c bash -c "
             rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
@@ -596,9 +581,6 @@ jobs:
           "
           echo "--- Verifying cache contents ---"
           ls -laR /tmp/rust-cache
-      - name: Release cache lock
-        if: always()
-        run: rmdir /tmp/rust-cache.lock
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
