--- a/Cargo.toml
+++ b/Cargo.toml
@@ -257,8 +257,7 @@ substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git
 substrate-test-runtime-client = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
 substrate-wasm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2506" }
 
-# TODO update this to release version
-raw-scripts = { git = "https://github.com/input-output-hk/partner-chains-smart-contracts.git", rev = "d7bcb3a7717c2d5397d47c3b3e31097662b0b3a1" }
+raw-scripts = { git = "https://github.com/input-output-hk/partner-chains-smart-contracts.git", tag = "v8.0.0" }
 # local dependencies
 
 # utils
