--- a/dev/envs/staging-preview/.envrc
+++ b/dev/envs/staging-preview/.envrc
@@ -16,4 +16,5 @@ export NATIVE_TOKEN_ASSET_NAME='5043546f6b656e44656d6f'
 
 # Operational parameters allowing to run node after sourcing this file
 export DB_SYNC_POSTGRES_CONNECTION_STRING="postgres://postgres:password123@localhost/cexplorer"
+export CARDANO_DATA_SOURCE="db-sync"
 export BLOCK_STABILITY_MARGIN=0
