--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -426,9 +426,9 @@ jobs:
           echo "--- Saving Rust cache to host cache ---"
           mkdir -p /tmp/rust-cache
           nix shell nixpkgs#rsync -c bash -c "
-            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
-            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
-            rsync -a ./target/ /tmp/rust-cache/target/
+            rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a --delete ./target/ /tmp/rust-cache/target/
           "
           echo "--- Verifying cache contents ---"
           ls -laR /tmp/rust-cache
